--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ PyYAML = "^5.4.1"
 uritemplate = "^3.0.1"
 django-cors-headers = "^3.7.0"
 django-tinymce = "^3.3.0"
+dialogflow = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pydocstyle = "^5.0.2"
