--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,23 +6,22 @@ authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Django = "^3.2.3"
+python = "^3.11"
+Django = "^4.1.7"
 uWSGI = "^2.0.19"
 psycopg2-binary = "^2.8.6"
 djangorestframework = "^3.12.4"
-django-oauth-toolkit = "^1.5.0"
-PyYAML = "^5.4.1"
-uritemplate = "^3.0.1"
+django-oauth-toolkit = "^2.2.0"
+uritemplate = "^4.1.1"
 django-cors-headers = "^3.7.0"
-django-tinymce = "^3.3.0"
+django-tinymce = "^3.5.0"
 dialogflow = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
-pydocstyle = "^5.0.2"
-black = "^19.10b0"
-flake8 = "^3.7.9"
-coverage = "^5.5"
+pydocstyle = "^6.1.1"
+black = "^22.3.0"
+flake8 = "^6.0.0"
+coverage = "^6.5.0"
 
 [tool.black]
 line-length = 119
