--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,43 +9,44 @@ on:
 jobs:
   build-docker-backend:
     name: "Build Docker Backend image"
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./backend
-    env:
-      DOCKER_IMAGE: "docker.pkg.github.com/kioui/drankspel/drankspel-backend:latest"
     steps:
-      - name: "Checkout the repository"
-        uses: "actions/checkout@v1"
-
-      - name: "Login to GitHub Packages"
-        run: "echo \"${{ secrets.GITHUB_TOKEN }}\" | docker login https://docker.pkg.github.com --username ${{ github.repository_owner }} --password-stdin"
-
-      - name: "Build Docker image"
-        run: "docker build --build-arg commit_hash=\"${{ github.sha }}\" --tag \"${DOCKER_IMAGE}\" ."
-
-      - name: "Push Docker image"
-        run: "docker push ${DOCKER_IMAGE}"
-
+    - uses: actions/checkout@v4
+    - uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/setup-buildx-action@v3
+    - uses: docker/build-push-action@v5
+      with:
+        context: .
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        push: true
+        tags: ghcr.io/kioui/drankspel-backend:${{ github.workflow_sha }}, ghcr.io/kioui/drankspel-backend:latest
 
   build-docker-frontend:
     name: "Build Docker Frontend image"
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./frontend
-    env:
-      DOCKER_IMAGE: "docker.pkg.github.com/kioui/drankspel/drankspel-frontend:latest"
     steps:
-      - name: "Checkout the repository"
-        uses: "actions/checkout@v1"
-
-      - name: "Login to GitHub Packages"
-        run: "echo \"${{ secrets.GITHUB_TOKEN }}\" | docker login https://docker.pkg.github.com --username ${{ github.repository_owner }} --password-stdin"
-
-      - name: "Build Docker image"
-        run: "docker build --build-arg commit_hash=\"${{ github.sha }}\" --tag \"${DOCKER_IMAGE}\" ."
-
-      - name: "Push Docker image"
-        run: "docker push ${DOCKER_IMAGE}"
+    - uses: actions/checkout@v4
+    - uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/setup-buildx-action@v3
+    - uses: docker/build-push-action@v5
+      with:
+        context: .
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        push: true
+        tags: ghcr.io/kioui/drankspel-frontend:${{ github.workflow_sha }}, ghcr.io/kioui/drankspel-frontend:latest
