--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
 
       - name: "Checkout the repository"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: "Setup Python"
         uses: actions/setup-python@v1
@@ -27,7 +27,7 @@ jobs:
           python -m pip install poetry
 
       - name: "Restore any cached Poetry dependencies"
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
@@ -50,4 +50,4 @@ jobs:
         run: poetry run coverage run website/manage.py test website/
 
       - name: "Check Coverage report"
-        run: poetry run coverage report
+        run: poetry run coverage report --omit "*/site-packages/*,*/migrations/*"
